--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,12 @@
-name: Lorax
+name: /home/ezuharad/Code/Lorax/.conda
 channels:
+  - pytorch
+  - nvidia
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=4.5
+  - aom=3.6.1
   - aws-c-auth=0.7.29
   - aws-c-cal=0.7.4
   - aws-c-common=0.9.28
@@ -21,6 +24,7 @@ dependencies:
   - azure-identity-cpp=1.8.0
   - azure-storage-blobs-cpp=12.12.0
   - azure-storage-common-cpp=12.7.0
+  - blas=1.0
   - blosc=1.21.6
   - branca=0.7.2
   - brotli=1.1.0
@@ -35,8 +39,18 @@ dependencies:
   - cfitsio=4.4.1
   - charset-normalizer=3.3.2
   - contourpy=1.3.0
+  - cuda-cudart=12.4.127
+  - cuda-cupti=12.4.127
+  - cuda-libraries=12.4.1
+  - cuda-nvrtc=12.4.127
+  - cuda-nvtx=12.4.127
+  - cuda-opencl=12.6.77
+  - cuda-runtime=12.4.1
+  - cuda-version=12.6
   - cycler=0.12.1
   - expat=2.6.3
+  - ffmpeg=4.4.2
+  - filelock=3.16.1
   - fmt=11.0.2
   - folium=0.17.0
   - font-ttf-dejavu-sans-mono=2.37
@@ -54,7 +68,12 @@ dependencies:
   - geopandas-base=1.0.1
   - geos=3.12.2
   - geotiff=1.7.3
+  - gettext=0.22.5
+  - gettext-tools=0.22.5
   - giflib=5.2.2
+  - gmp=6.3.0
+  - gmpy2=2.1.5
+  - gnutls=3.7.9
   - h2=4.1.0
   - hdf4=4.2.15
   - hdf5=1.14.3
@@ -69,21 +88,32 @@ dependencies:
   - keyutils=1.6.1
   - kiwisolver=1.4.7
   - krb5=1.21.3
+  - lame=3.100
   - lcms2=2.16
   - ld_impl_linux-64=2.40
   - lerc=4.0.0
   - libabseil=20240116.2
   - libaec=1.1.3
   - libarchive=3.7.4
+  - libasprintf=0.22.5
+  - libasprintf-devel=0.22.5
   - libblas=3.9.0
   - libbrotlicommon=1.1.0
   - libbrotlidec=1.1.0
   - libbrotlienc=1.1.0
   - libcblas=3.9.0
   - libcrc32c=1.1.2
+  - libcublas=12.4.5.8
+  - libcufft=11.2.1.3
+  - libcufile=1.11.1.6
+  - libcurand=10.3.7.77
   - libcurl=8.10.0
+  - libcusolver=11.6.1.9
+  - libcusparse=12.3.1.170
   - libdeflate=1.21
+  - libdrm=2.4.123
   - libedit=3.1.20191231
+  - libegl=1.7.0
   - libev=4.33
   - libexpat=2.6.3
   - libffi=3.4.2
@@ -103,22 +133,34 @@ dependencies:
   - libgdal-postgisraster=3.9.2
   - libgdal-tiledb=3.9.2
   - libgdal-xls=3.9.2
+  - libgettextpo=0.22.5
+  - libgettextpo-devel=0.22.5
   - libgfortran=14.1.0
   - libgfortran-ng=14.1.0
   - libgfortran5=14.1.0
+  - libgl=1.7.0
   - libglib=2.80.3
+  - libglvnd=1.7.0
+  - libglx=1.7.0
   - libgomp=14.1.0
   - libgoogle-cloud=2.28.0
   - libgoogle-cloud-storage=2.28.0
   - libgrpc=1.62.2
+  - libhwloc=2.11.1
   - libiconv=1.17
+  - libidn2=2.3.7
   - libjpeg-turbo=3.0.0
   - libkml=1.3.0
   - liblapack=3.9.0
   - libnetcdf=4.9.2
   - libnghttp2=1.58.0
+  - libnpp=12.2.5.30
   - libnsl=2.0.1
+  - libnvfatbin=12.6.77
+  - libnvjitlink=12.4.127
+  - libnvjpeg=12.3.1.117
   - libopenblas=0.3.27
+  - libpciaccess=0.18
   - libpng=1.6.43
   - libpq=16.4
   - libprotobuf=4.25.3
@@ -129,28 +171,41 @@ dependencies:
   - libssh2=1.11.0
   - libstdcxx=14.1.0
   - libstdcxx-ng=14.1.0
+  - libtasn1=4.19.0
   - libtiff=4.6.0
+  - libunistring=0.9.10
   - libuuid=2.38.1
+  - libva=2.22.0
+  - libvpx=1.13.1
+  - libwebp=1.4.0
   - libwebp-base=1.4.0
   - libxcb=1.16
   - libxcrypt=4.4.36
   - libxml2=2.12.7
   - libzip=1.10.1
   - libzlib=1.3.1
+  - llvm-openmp=15.0.7
   - lz4-c=1.9.4
   - lzo=2.10
   - mapclassify=2.8.0
   - markupsafe=2.1.5
   - matplotlib-base=3.9.2
   - minizip=4.0.7
+  - mkl=2022.2.1
+  - mpc=1.3.1
+  - mpfr=4.2.1
+  - mpmath=1.3.0
   - munkres=1.1.4
   - ncurses=6.5
+  - nettle=3.9.1
   - networkx=3.3
   - nspr=4.35
   - nss=3.104
   - numpy=2.1.1
+  - openh264=2.3.1
   - openjpeg=2.5.2
   - openssl=3.3.2
+  - p11-kit=0.24.1
   - packaging=24.1
   - pandas=2.2.2
   - pcre2=10.44
@@ -171,7 +226,11 @@ dependencies:
   - python-dateutil=2.9.0
   - python-tzdata=2024.1
   - python_abi=3.12
+  - pytorch=2.5.0
+  - pytorch-cuda=12.4
+  - pytorch-mutex=1.0
   - pytz=2024.2
+  - pyyaml=6.0.2
   - qhull=2020.2
   - re2=2023.09.01
   - readline=8.2
@@ -185,15 +244,26 @@ dependencies:
   - snappy=1.2.1
   - spdlog=1.14.1
   - sqlite=3.46.1
+  - svt-av1=1.4.1
+  - sympy=1.13.3
+  - tbb=2021.13.0
   - threadpoolctl=3.5.0
   - tiledb=2.26.0
   - tk=8.6.13
+  - torchtriton=3.1.0
+  - torchvision=0.20.0
+  - typing_extensions=4.12.2
   - tzcode=2024b
   - tzdata=2024a
   - uriparser=0.9.8
   - urllib3=2.2.2
+  - wayland=1.23.1
+  - wayland-protocols=1.37
   - wheel=0.44.0
+  - x264=1!164.3095
+  - x265=3.5
   - xerces-c=3.2.5
+  - xorg-fixesproto=5.0
   - xorg-kbproto=1.0.7
   - xorg-libice=1.1.1
   - xorg-libsm=1.2.4
@@ -201,12 +271,17 @@ dependencies:
   - xorg-libxau=1.0.11
   - xorg-libxdmcp=1.1.3
   - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
   - xorg-libxrender=0.9.11
   - xorg-renderproto=0.11.1
   - xorg-xextproto=7.3.0
   - xorg-xproto=7.0.31
   - xyzservices=2024.9.0
   - xz=5.2.6
+  - yaml=0.2.5
   - zlib=1.3.1
   - zstandard=0.23.0
   - zstd=1.5.6
+  - pip:
+      - lorax==0.1
+prefix: /home/ezuharad/Code/Lorax/.conda
